fix: trigger width and remove overflow from bodyContainer to prevent scrolling bug

--- a/components/dropdown/src/styles/style.scss
+++ b/components/dropdown/src/styles/style.scss
@@ -36,6 +36,6 @@
   }
 }
 
-::part(popover-trigger) {
+[auro-layover] {
   width: 100%;
 }
